--- a/src/components/functionalcss.css
+++ b/src/components/functionalcss.css
@@ -1,9 +1,14 @@
+.FunctionalMain {
+	background-color: white;
+}
 .articleTags {
 	margin: 5px;
 	background-color: #0079ff;
 }
 a {
 	color: #123d6e;
+	font-family: "Slabo 27px", serif;
+	font-size: 80px;
 }
 ul.pagination {
 	margin: 20px;
